fixed z-index ordering

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,17 +26,22 @@ body {
     height: 100vh;
     overflow-y: auto;
     perspective: 10px;
+    background: linear-gradient(to bottom, #201c2f 0%, #100751 100%);
 }
 
-#starfield {
-    width: .6px;
-    height: .6px;
+.starfield {
     background: transparent;
     float: left;
     transform-style: preserve-3d;
-    transform: translateZ(-50px) scale(10);
     position: absolute;
     overflow: hidden;
+    z-index: -10;
+}
+
+#starfield1 {
+    width: .6px;
+    height: .6px;
+    transform: translateZ(-50px) scale(10);
     left: -5000px;
     top: -2000px;
 }
@@ -44,12 +49,7 @@ body {
 #starfield2 {
     width: 1.2px;
     height: 1.2px;
-    background: transparent;
-    float: left;
-    transform-style: preserve-3d;
     transform: translateZ(-30px) scale(6);
-    position: absolute;
-    overflow: hidden;
     left: -3000px;
     top: -1200px;
 }
@@ -57,19 +57,12 @@ body {
 #starfield3 {
     width: 3px;
     height: 3px;
-    background: transparent;
-    float: left;
-    transform-style: preserve-3d;
     transform: translateZ(-10px) scale(2);
-    position: absolute;
-    overflow: hidden;
     left: -1000px;
     top: -600px;
 }
-
 main {
     width: 100%;
-    background: linear-gradient(to bottom, #201c2f 0%, #100751 100%);
 }
 
 .content {
@@ -77,6 +70,7 @@ main {
     margin: auto;
     display: flex;
     justify-content: flex-end;
+    z-index: 10;
 }
 aside {
     width: 25%;
@@ -110,7 +104,7 @@ aside h1 {
     border-radius: 50%;
     margin: -62px auto auto auto;
     border: white solid 2px;
-    background-color: white;
+    background-color: red;
 }
 
 #social-links {
@@ -190,7 +184,7 @@ aside h1 {
     flex-direction: column;
     justify-content: space-around;
     background-color: hsla(0, 100%, 100%, 0.1);
-    backdrop-filter: blur(1px);
+    backdrop-filter: blur(2px);
 }
 
 .project-content h2 {
